<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pegroman.tets.Register">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/rNombre"
        android:textSize="22dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rPass"
        android:layout_below="@+id/rName"
        android:layout_centerHorizontal="true"
        android:hint="@string/rPass"
        android:inputType="textPassword"
        android:textSize="22dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rNpass"
        android:layout_below="@+id/rPass"
        android:layout_centerHorizontal="true"
        android:hint="@string/rNpass"
        android:inputType="textPassword"
        android:textSize="22dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rBtnRegistrar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/rBtnRegistrar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rBtnLimpiar"
        android:id="@+id/rBtnLimpiar"
        android:layout_below="@+id/rBtnRegistrar"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:id="@+id/lgin"
        android:layout_below="@+id/rBtnLimpiar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:textSize="22dp"
        android:textColor="@color/colorPrimary" />
</RelativeLayout>
