<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pegroman.tets.Login">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lNombre"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/lNombre"
        android:textSize="22dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lPass"
        android:layout_below="@+id/lNombre"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:textSize="22dp"
        android:hint="@string/lPass" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lBtnLogin"
        android:id="@+id/lBtnLogin"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rBtnLimpiar"
        android:id="@+id/lBtnLimpiar"
        android:layout_below="@+id/lBtnLogin"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
