<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pegroman.tets.AgregarPersona">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGuardar"
        android:id="@+id/btnGuardar"
        android:textSize="19dp"
        android:layout_above="@+id/btnCancelar"
        android:layout_alignEnd="@+id/btnCancelar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancelar"
        android:id="@+id/btnCancelar"
        android:textSize="19dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addImagen"
        android:layout_alignStart="@+id/btnGuardar"
        android:layout_alignEnd="@+id/btnCancelar"
        android:layout_below="@+id/idItem"
        android:layout_above="@+id/btnGuardar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addUbicacion"
        android:layout_above="@+id/btnGuardar"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addHora"
        android:layout_above="@id/addUbicacion"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addApellido"
        android:hint="@string/addApellido"
        android:textSize="19dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addNombre"
        android:layout_below="@+id/addApellido"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idItem"
        android:layout_below="@+id/addNombre"
        android:layout_alignParentEnd="true"
        android:inputType="number"/>

</RelativeLayout>
